--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Certificate</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="certificate">
+        <div class="header">
+            <h1>CERTIFICATE OF ACHIEVEMENT</h1>
+        </div>
+        <div class="content">
+            <div class="left">
+                <h2>John Doe</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut mauris nec turpis auctor auctor. Quisque sed massa ex. Sed sollicitudin, leo vitae facilisis ultrices, elit massa aliquam neque, nec pharetra magna nibh sed diam. Duis quis placerat velit, in scelerisque augue. Mauris vel mollis sapien. Mauris vestibulum risus at eros tempor ullamcorper. Nullam volutpat dolor iaculis lorem elementum, non fermentum nunc commodo. Etiam turpis felis, dapibus ut dui varius, tempor commodo ex. Nullam pharetra risus eu feugiat venenatis. Nunc odio orci, congue eget magna sed, laoreet pellentesque orci. Etiam ultrices odio sem, eget porttitor quam fringilla et. 
+                </p>
+                <p>On this date: March 15, 2023</p>
+            </div>
+            <div class="right">
+                <img src="certificate-seal.png" alt="Certificate Seal">
+            </div>
+        </div>
+        <div class="footer">
+            <div class="signature">
+                <img src="signature.png" alt="Signature">
+                <p>John Smith</p>
+                <p>Director of Education</p>
+            </div>
+            <div class="note">
+                <p>This certificate is awarded to John Doe for completing the course in HTML and CSS.</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
