--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
     <div class="certificate">
         <div class="header">
-            <h1>CERTIFICATE OF ACHIEVEMENT</h1>
+            <h1>Dugsia Tababarka Dirawalnimada & Makaanikada ee Wadani</h1>
+            <h1>ወዳኒ የአሽከርካሪዎች እና የመካኒክ ማሰልጠኛ </h1>
         </div>
         <div class="content">
             <div class="left">
