--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
         <div class="header">
             <div class="logo-container">
-              <img class="logo1" src="img/logo.jpg" alt="logo" />
-              <h1>Dugsia Tababarka Dirawalnimada & Makaanikada ee Wadani</h1>
-              <img class="logo2" src="img/logo.jpg" alt="logo" />
+              <img class="logo1" src="img/logo.png" alt="logo" />
+              <h1 class="header-main">Dugsia Tababarka Dirawalnimada & Makaanikada ee Wadani</h1>
+              <img class="logo2" src="img/logo.png" alt="logo" />
             </div>
             <h1 class="header-title">ወዳኒ የአሽከርካሪዎች እና የመካኒክ ማሰልጠኛ</h1>
           </div>
