--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span>ለ</span>
             <p>__________________________________</p>
           </div>
-          <p style="margin-top:0px;margin-bottom:0px">
+          <p style="margin-top: 0px; margin-bottom: 0px;">
             ወዳኒ የአሽከርካሪዎች ማሰልጠኛ ትቋም የብቃት ማረጋገጫ የንድፍ ሃሳብና ስልጠና
           </p>
           <div class="desc-left">
@@ -37,14 +37,13 @@
             <span>ድረስ</span>
             <p>_________________</p>
             <span>የተሰጠውን ስልጠና አጠናቀው</span>
-            
           </div>
           <span>የህ የምስክር ውረቀት ተሰጥቶዋቸዋል።</span>
         </div>
         <div class="divider"></div>
         <div class="right-content">
           <h2>SHAHAADO</h2>
-          <p style="margin-top:0px;margin-bottom:0px">
+          <p style="margin-top: 0px; margin-bottom: 0px;">
             Dugsiga Tabubarka Dirawainimada iyo Mekaanikada Wadani Wuxuu
             Cadeynayaa in
           </p>
@@ -70,9 +69,9 @@
           <div class="desc-right">
             <span>Dhibic Dhan</span>
             <p>______</p>
-            <span>Waxaana Shahaadada Loo </span>
+            <span>Waxaana Shahaadada Loo</span>
           </div>
-          <span> Siiyey Cadeyn Ahaan</span>
+          <span>Siiyey Cadeyn Ahaan</span>
         </div>
       </div>
 
