--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div class="certificate">
       <div class="header">
         <div class="logo-container">
-          <img class="logo1" src="img/logo.jpg" alt="logo" />
+          <img class="logo1" src="img/logo.png" alt="logo" />
           <h1>Dugsia Tababarka Dirawalnimada & Makaanikada ee Wadani</h1>
-          <img class="logo2" src="img/logo.jpg" alt="logo" />
+          <img class="logo2" src="img/logo.png" alt="logo" />
         </div>
         <h1 class="header-title">ወዳኒ የአሽከርካሪዎች እና የመካኒክ ማሰልጠኛ</h1>
       </div>
@@ -38,9 +38,9 @@
             <p>_________________</p>
             <span>የተሰጠውን ስልጠና አጠናቀው</span>
           </div>
-          <span>የህ የምስክር ውረቀት ተሰጥቶዋቸዋል።</span>
+          <span>ይህ የምስክር ወረቀት ተሰጥቶዋቸዋል።</span>
         </div>
-        <div class="divider"></div>
+        <div class="divider" style="align-items: center;"></div>
         <div class="right-content">
           <h2>SHAHAADO</h2>
           <p style="margin-top: 0px; margin-bottom: 0px;">
