--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div class="certificate">
       <div class="header">
         <div class="logo-container">
-          <img class="logo1" src="img/logo.jpg" alt="logo" />
+          <img class="logo1" src="img/logo.png" alt="logo" />
           <h1>Dugsia Tababarka Dirawalnimada & Makaanikada ee Wadani</h1>
-          <img class="logo2" src="img/logo.jpg" alt="logo" />
+          <img class="logo2" src="img/logo.png" alt="logo" />
         </div>
         <h1 class="header-title">ወዳኒ የአሽከርካሪዎች እና የመካኒክ ማሰልጠኛ</h1>
       </div>
@@ -24,8 +24,9 @@
             <p>__________________________________</p>
           </div>
           <p style="margin-top: 0px; margin-bottom: 0px;">
-            ወዳኒ የአሽከርካሪዎች ማሰልጠኛ ትቋም የብቃት ማረጋገጫ የንድፍ ሃሳብና ስልጠና
+            ወዳኒ የአሽከርካሪዎች ማሰልጠኛ ትቋም የብቃት
           </p>
+          <span>ማረጋገጫ የንድፍ ሃሳብና ስልጠና</span>
           <div class="desc-left">
             <span>ከ</span>
             <p>_______________</p>
