--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div class="bg-image"></div>
     <div class="certificate">
       <div class="header">
         <div class="logo-container">
@@ -23,9 +24,9 @@
             <span>ለ</span>
             <p>__________________________________</p>
           </div>
-          <p style="margin-top: 0px; margin-bottom: 0px;">
+          <span style="margin-top: 0px; margin-bottom: 0px;">
             ወዳኒ የአሽከርካሪዎች ማሰልጠኛ ትቋም የብቃት ማረጋገጫ የንድፍ ሃሳብና ስልጠና
-          </p>
+          </span>
           <div class="desc-left">
             <span>ከ</span>
             <p>_______________</p>
@@ -43,18 +44,18 @@
         <div class="divider" style="align-items: center;"></div>
         <div class="right-content">
           <h2>SHAHAADO</h2>
-          <p style="margin-top: 0px; margin-bottom: 0px;">
+          <span style="margin-top: 0px; margin-bottom: 0px;">
             Dugsiga Tabubarka Dirawainimada iyo Mekaanikada Wadani Wuxuu
             Cadeynayaa in
-          </p>
+          </span>
           <div class="desc-right">
             <span>Mudane/Marwo</span>
-            <p>_________________</p>
+            <p>__________________________________</p>
             <span>UU</span>
           </div>
           <span>Qaatey/ay qaadatey Aqoonta & Tabaabar Ku filan</span>
           <div class="desc-right">
-            <p>Laga Bilaabo</p>
+            <span>Laga Bilaabo</span>
             <p>______</p>
             <span>ilaa</span>
             <p>____________</p>
@@ -85,5 +86,6 @@
         </div>
       </div>
     </div>
+    
   </body>
 </html>
