--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
           <div class="desc-left">
             <span>ለ</span>
-            <p>__________________________________</p>
+            <p>___________________________________________</p>
           </div>
-          <p style="margin-top: 0px; margin-bottom: 0px;">
+          <span style="margin-top: 0px; margin-bottom: 0px;">
             ወዳኒ የአሽከርካሪዎች ማሰልጠኛ ትቋም የብቃት ማረጋገጫ የንድፍ ሃሳብና ስልጠና
-          </p>
+          </span>
           <div class="desc-left">
             <span>ከ</span>
             <p>_______________</p>
