--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    
+    <div class="box">
     <div class="certificate">
       <div class="header">
         <div class="logo-container">
@@ -86,7 +86,7 @@
         </div>
       </div>
     </div>
-   
+  </div>
   
   </body>
 </html>
