--- a/index.html
+++ b/index.html
@@ -6,87 +6,88 @@
   </head>
   <body>
     <div class="box">
-    <div class="certificate">
-      <div class="header">
-        <div class="logo-container">
-          <img class="logo1" src="img/logo.png" alt="logo" />
-          <h1>Dugsia Tababarka Dirawalnimada & Makaanikada ee Wadani</h1>
-          <img class="logo2" src="img/logo.png" alt="logo" />
-        </div>
-        <h1 class="header-title">ወዳኒ የአሽከርካሪዎች እና የመካኒክ ማሰልጠኛ</h1>
-      </div>
+      <div class="box-image">
+        <div class="certificate">
+          <div class="header">
+            <div class="logo-container">
+              <img class="logo1" src="img/logo.png" alt="logo" />
+              <h1>Dugsia Tababarka Dirawalnimada & Makaanikada ee Wadani</h1>
+              <img class="logo2" src="img/logo.png" alt="logo" />
+            </div>
+            <h1 class="header-title">ወዳኒ የአሽከርካሪዎች እና የመካኒክ ማሰልጠኛ</h1>
+          </div>
 
-      <div class="container">
-        <div class="left-content">
-          <h2>የምስክር ወረቀት</h2>
+          <div class="container">
+            <div class="left-content">
+              <h2>የምስክር ወረቀት</h2>
 
-          <div class="desc-left">
-            <span>ለ</span>
-            <p>___________________________________________</p>
+              <div class="desc-left">
+                <span>ለ</span>
+                <p>___________________________________________</p>
+              </div>
+              <span style="margin-top: 0px; margin-bottom: 0px">
+                ወዳኒ የአሽከርካሪዎች ማሰልጠኛ ትቋም የብቃት ማረጋገጫ የንድፍ ሃሳብና ስልጠና
+              </span>
+              <div class="desc-left">
+                <span>ከ</span>
+                <p>_______________</p>
+                <span>እስከ</span>
+                <p>_______________</p>
+                <span>አ.ም</span>
+              </div>
+              <div class="desc-left">
+                <span>ድረስ</span>
+                <p>_________________</p>
+                <span>የተሰጠውን ስልጠና አጠናቀው</span>
+              </div>
+              <span>ይህ የምስክር ወረቀት ተሰጥቶዋቸዋል።</span>
+            </div>
+            <div class="divider" style="align-items: center"></div>
+            <div class="right-content">
+              <h2>SHAHAADO</h2>
+              <span style="margin-top: 0px; margin-bottom: 0px">
+                Dugsiga Tabubarka Dirawainimada iyo Mekaanikada Wadani Wuxuu
+                Cadeynayaa in
+              </span>
+              <div class="desc-right">
+                <span>Mudane/Marwo</span>
+                <p>__________________________________</p>
+                <span>UU</span>
+              </div>
+              <span>Qaatey/ay qaadatey Aqoonta & Tabaabar Ku filan</span>
+              <div class="desc-right">
+                <span>Laga Bilaabo</span>
+                <p>______</p>
+                <span>ilaa</span>
+                <p>____________</p>
+                <span>Heerka</span>
+              </div>
+              <div class="desc-right">
+                <span>Waxbarashadiisuna Waa</span>
+                <p>__________</p>
+                <span>Wuxuuna</span>
+              </div>
+              <span>Keenay</span>
+              <div class="desc-right">
+                <span>Dhibic Dhan</span>
+                <p>______</p>
+                <span>Waxaana Shahaadada Loo</span>
+              </div>
+              <span>Siiyey Cadeyn Ahaan</span>
+            </div>
           </div>
-          <span style="margin-top: 0px; margin-bottom: 0px;">
-            ወዳኒ የአሽከርካሪዎች ማሰልጠኛ ትቋም የብቃት ማረጋገጫ የንድፍ ሃሳብና ስልጠና
-          </span>
-          <div class="desc-left">
-            <span>ከ</span>
-            <p>_______________</p>
-            <span>እስከ</span>
-            <p>_______________</p>
-            <span>አ.ም</span>
-          </div>
-          <div class="desc-left">
-            <span>ድረስ</span>
-            <p>_________________</p>
-            <span>የተሰጠውን ስልጠና አጠናቀው</span>
-          </div>
-          <span>ይህ የምስክር ወረቀት ተሰጥቶዋቸዋል።</span>
-        </div>
-        <div class="divider" style="align-items: center;"></div>
-        <div class="right-content">
-          <h2>SHAHAADO</h2>
-          <span style="margin-top: 0px; margin-bottom: 0px;">
-            Dugsiga Tabubarka Dirawainimada iyo Mekaanikada Wadani Wuxuu
-            Cadeynayaa in
-          </span>
-          <div class="desc-right">
-            <span>Mudane/Marwo</span>
-            <p>__________________________________</p>
-            <span>UU</span>
-          </div>
-          <span>Qaatey/ay qaadatey Aqoonta & Tabaabar Ku filan</span>
-          <div class="desc-right">
-            <span>Laga Bilaabo</span>
-            <p>______</p>
-            <span>ilaa</span>
-            <p>____________</p>
-            <span>Heerka</span>
-          </div>
-          <div class="desc-right">
-            <span>Waxbarashadiisuna Waa</span>
-            <p>__________</p>
-            <span>Wuxuuna</span>
-          </div>
-          <span>Keenay</span>
-          <div class="desc-right">
-            <span>Dhibic Dhan</span>
-            <p>______</p>
-            <span>Waxaana Shahaadada Loo</span>
-          </div>
-          <span>Siiyey Cadeyn Ahaan</span>
-        </div>
-      </div>
 
-      <div class="footer">
-        <div class="signature">
-          <p>Jigjiga</p>
-          <p>Maamulka Xafiiska</p>
-        </div>
-        <div class="note">
-          <p>______________________</p>
+          <div class="footer">
+            <div class="signature">
+              <p>Jigjiga</p>
+              <p>Maamulka Xafiiska</p>
+            </div>
+            <div class="note">
+              <p>______________________</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  
   </body>
 </html>
