--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <title>Certificate</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body>
+  <body>   
+   <!--  <button onclick="print()";>
+      Print
+      </button>    -->
+    <div class="textarea">
+      <input id="input" type="text" placeholder="Type something"/>
+      <button id="button" onclick="printInput()">Print Input</button>
+    <h2 id="output"></h2>
+    </div>
     <div class="box">
       <div class="box-image">
         <div class="certificate">
@@ -89,5 +97,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
